--- a/cloud-demo/pom.xml
+++ b/cloud-demo/pom.xml
@@ -40,6 +40,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--nacos管理依赖-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.2.6.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- mysql驱动 -->
             <dependency>
                 <groupId>mysql</groupId>
