--- a/cloud-demo/user-service/src/main/resources/application.yml
+++ b/cloud-demo/user-service/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   application:
     name: user-service # user 服务名称
+  cloud:
+    nacos:
+      server-addr: localhost:8848 # nacos 服务地址
+      discovery:
+        cluster-name: GZ # 集群名称  GZ广州  SH上海
+        # weight: 1.0 # 权重
+
 
 mybatis:
   type-aliases-package: cn.xbw.user.pojo
@@ -19,7 +26,7 @@ logging:
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
 
-eureka:
-  client:
-    service-url: # eureka 地址
-      defaultZone: http://localhost:10086/eureka
+#eureka:
+#  client:
+#    service-url: # eureka 地址
+#      defaultZone: http://localhost:10086/eureka
