--- a/redis_cluster_demo/src/main/resources/application.yaml
+++ b/redis_cluster_demo/src/main/resources/application.yaml
@@ -7,10 +7,19 @@ logging:
 
 spring:
   redis:
-    sentinel:
-      master: mymaster # master ??
+    cluster:  # 分片集群模式下的配置
       nodes:
-        - 192.168.0.100:27001
-        - 192.168.0.100:27002
-        - 192.168.0.100:27003
-    password: 12345678
+        - 192.168.0.100:8001
+        - 192.168.0.100:8002
+        - 192.168.0.100:8003
+        - 192.168.0.100:9001
+        - 192.168.0.100:9002
+        - 192.168.0.100:9003
+#    哨兵模式下的配置：
+#    sentinel:
+#      master: mymaster # master ??
+#      nodes:
+#        - 192.168.0.100:27001
+#        - 192.168.0.100:27002
+#        - 192.168.0.100:27003
+#    password: 12345678
