--- a/cloud-demo/order-service/src/main/resources/application.yml
+++ b/cloud-demo/order-service/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
     name: order-service # user 服务名称
   cloud:
     nacos:
-      server-addr: localhost:8848 # nacos 服务地址
+      server-addr: localhost:80 # Nacos地址，在Windows本地搭建了nacos集群，配置了负载均衡，直接访问80就行
+#      server-addr: localhost:8848 # nacos 服务地址
       discovery:
         cluster-name: GZ # 集群名称，这样就能与同为GZ下的两个user-service实例归属同一GZ集群
 
