--- a/cloud-demo/user-service/src/main/resources/application.yml
+++ b/cloud-demo/user-service/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
     username: root
     password: 12345678
     driver-class-name: com.mysql.jdbc.Driver
-  application:
-    name: user-service # user 服务名称
+#  application:
+#    name: user-service # user 服务名称
   cloud:
     nacos:
-      server-addr: localhost:8848 # nacos 服务地址
+#      server-addr: localhost:8848 # nacos 服务地址
       discovery:
         cluster-name: GZ # 集群名称  GZ广州  SH上海
         # weight: 1.0 # 权重
