--- a/cloud-demo/user-service/src/main/resources/bootstrap.yml
+++ b/cloud-demo/user-service/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     active: dev #开发环境，这里是dev
   cloud:
     nacos:
-      server-addr: localhost:80 # Nacos地址，在Windows本地搭建了nacos集群，配置了负载均衡，直接访问80就行
-#      server-addr: localhost:8848 # Nacos地址
+#      server-addr: localhost:80 # Nacos地址，在Windows本地搭建了nacos集群，配置了负载均衡，直接访问80就行
+      server-addr: localhost:8848 # Nacos地址
       config:
         file-extension: yaml # 文件后缀名
