--- a/cloud-demo/order-service/pom.xml
+++ b/cloud-demo/order-service/pom.xml
@@ -51,6 +51,16 @@
             <artifactId>feign-api</artifactId>
             <version>1.0</version>
         </dependency>
+        <!--sentinel-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <!--sentinel监听nacos的依赖-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
