--- a/cloud-demo/order-service/src/main/resources/application.yml
+++ b/cloud-demo/order-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8085
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
@@ -9,6 +9,16 @@ spring:
   application:
     name: order-service # user 服务名称
   cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8080  # sentinel控制台地址
+    datasource: # sentinel 规则持久化
+      flow: # 限流规则
+        nacos:
+          server-addr: localhost:8848 # nacos地址
+          dataId: order-service-flow-rules
+          groupId: SENTINEL_GROUP
+          rule-type: flow # 还可以是：degrade（降级）、authority（限权）、param-flow（参数限流）
     nacos:
 #      server-addr: localhost:80 # Nacos地址，在Windows本地搭建了nacos集群，配置了负载均衡，直接访问80就行
       server-addr: localhost:8848 # nacos 服务地址
@@ -67,3 +77,5 @@ feign:
     enabled: true # 开启feign对HttpClient的支持
     max-connections: 200 # 最大的连接数
     max-connections-per-route: 50 # 每个路径的最大连接数
+  sentinel:
+    enabled: true # 开启feign对sentinel的支持
